--- a/08-dom/04-attr-create/index.html
+++ b/08-dom/04-attr-create/index.html
@@ -35,7 +35,7 @@
             </section>
             <section class="material">
                 <span id="source" data-image="http://www.randomkittengenerator.com/cats/rotator.php"></span>
-                <figure id="target"></figure>
+                <figure id="target" style="border:2px solid black;"></figure>
             </section>
         </div>
     </div>
